--- a/web/src/components/Vditor/css/_ir.scss
+++ b/web/src/components/Vditor/css/_ir.scss
@@ -146,7 +146,7 @@
     // padding-top: 30px;
   color: #606c80 !important;
   font-size: 16px !important;
-  line-height: 2em !important;
+  line-height: 100% !important;
   box-sizing: border-box;
   font-weight: 400;
   margin: 8px 0 !important;
